<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/m_viewChanger"
        android:showAsAction="never"
        android:title="@string/mbl_viewList"/>
    <item
        android:id="@+id/m_action_terms"
        android:showAsAction="never"
        android:title="@string/title_activity_terms"/>
    <item
        android:id="@+id/m_refreshBooksList"
        android:showAsAction="never"
        android:title="@string/mbl_refreshBooksList"/>
    <item
        android:id="@+id/m_about"
        android:showAsAction="never"
        android:title="@string/mbl_about"/>
    <item
        android:id="@+id/m_settings"
        android:showAsAction="never"
        android:title="@string/mbl_settings"/>
    <item
        android:id="@+id/m_profile"
        android:showAsAction="never"
        android:title="@string/m_my_profile" 
        />    
    <item
        android:id="@+id/m_logout"
        android:showAsAction="never"
        android:title="@string/m_logout" 
        />
</menu>