<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:key="pref.screen">
    <PreferenceCategory
        android:key="epodreczniki.preferences"
        android:title="@string/pref_title_settings"        
        >        
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_allow_use_mobile_data"
            android:title="@string/pref_option_title_allow_mobile_data"
            android:summary="@string/pref_option_summary_allow_mobile_data" />
        <CheckBoxPreference 
            android:defaultValue="false"
            android:key="pref_check_for_updates_on_start"
           	android:title="@string/pref_check_for_updates_on_start_title"
           	android:summary="@string/pref_check_for_updates_on_start_summary"
            />                
    </PreferenceCategory>
    <PreferenceCategory                
        android:key="epodreczniki.preferences.login"
        android:title="@string/login_screen">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_allow_account_creation_on_login_screen"
            android:title="Dodawanie kont z ekranu logowania"
            android:summary="Zaznacz tę opcję jeżeli zezwalasz na tworzenie kont z ekranu logowania."
            />        
    </PreferenceCategory>

</PreferenceScreen>