<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/view_paddings"
    tools:context=".TermsActivity" >

     <ScrollView
         android:id="@+id/at_sv_termsValue"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"                 
         android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp" 
        android:contentDescription="@string/sv" >

        <TextView
            android:id="@+id/at_tv_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/at_tv_content_terms"
            android:autoLink="web" />
    </ScrollView>

    <Button
        android:id="@+id/at_btn_acceptTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"                
        android:contentDescription="@string/btn_acceptTerms"
        android:text="@string/btn_label_accept"/>

</LinearLayout>
