<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical" 
    android:divider="@drawable/profile_divider"
    android:showDividers="middle">
    <CheckBox
        android:id="@+id/ap_cb_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_teacher_content" 
        />    
    <RadioGroup 
        android:id="@+id/ap_rg_library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"               
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/library_view" 
            android:labelFor="@id/ap_rg_library"
            />
        <RadioButton
            android:id="@+id/ap_rb_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list"
            />
        <RadioButton
            android:id="@+id/ap_rb_pager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery" 
            />
    </RadioGroup>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:ems="10"
            	android:text="@string/book_filter"            
            	/>              
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="4dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/education_level" />

            <Spinner
                android:id="@+id/ap_spnr_education_level" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="4dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/education_class" 
                />
            <Spinner 
                android:id="@+id/ap_spnr_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <!-- <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:ems="10"
            	/>
            <Button
                android:id="@+id/ap_btn_save_filter" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zapisz"
                />
        </LinearLayout>         -->
    </LinearLayout>
    <CheckBox
        android:id="@+id/ap_cb_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_without_password" 
        />              
    <Button
        android:id="@+id/ap_btn_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password" 
        />
</LinearLayout>
