<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center">
    <EditText
        android:id="@+id/fcp_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" 
        />
    <EditText
        android:id="@+id/fcp_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        />
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">
        <Button
            android:id="@+id/fcp_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5" 
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button 
            android:id="@+id/fcp_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:text="@string/save"
            style="?android:attr/buttonBarButtonStyle"
            />        
    </LinearLayout>

</LinearLayout>
