<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/view_paddings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/apwi_tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/apwi_tv_question" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/apwi_tv_connection_detection_in_progress" />

        <ProgressBar
            android:id="@+id/apwi_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/apwi_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/apwi_tv_question"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:text="@string/apwi_tv_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/apwi_btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/apwi_tv_question"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:src="@drawable/ic_action_settings"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/btn_settings" />

</RelativeLayout>